openapi-ui-infrastructure/kubernetes/sandbox-ui-ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "sandbox-ui-ext-ingress"
  namespace: "dev"
spec:
  defaultBackend:
    service:
      name: "sandbox-ui-service"
      port:
        number: 80
status:
  loadBalancer: {}
